--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -140,13 +140,13 @@
       "product": {
         "type": "product",
         "settings": {
-          "enable_payment_button": true,
+          "enable_payment_button": false,
           "show_quantity": true,
-          "svg-a": "<svg xmlns=\"http://www.w3.org/2000/svg\" aria-hidden=\"true\" focusable=\"false\" role=\"presentation\" class=\"icon icon-heart\" viewbox=\"0 0 64 64\">\n  <path d=\"M32 58s-6-4.35-11.92-9.8C14.22 42.63 8 35.36 8 27.14 8 18.93 14.11 13 22 13c4.33 0 8.4 1.84 10 4.74C34.6 14.84 38.67 13 43 13c7.89 0 14 5.93 14 14.14 0 8.22-6.22 15.49-12.08 21.06C38 53.65 32 58 32 58z\" fill=\"currentColor\"></path>\n</svg>",
+          "svg-a": "<svg width=\"20\" height=\"20\" viewbox=\"0 0 20 20\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\">\n<path d=\"M15.8332 11.6667C17.0748 10.45 18.3332 8.99167 18.3332 7.08333C18.3332 5.86776 17.8503 4.70197 16.9907 3.84243C16.1312 2.98289 14.9654 2.5 13.7498 2.5C12.2832 2.5 11.2498 2.91667 9.99984 4.16667C8.74984 2.91667 7.7165 2.5 6.24984 2.5C5.03426 2.5 3.86847 2.98289 3.00893 3.84243C2.14939 4.70197 1.6665 5.86776 1.6665 7.08333C1.6665 9 2.9165 10.4583 4.1665 11.6667L9.99984 17.5L15.8332 11.6667Z\" stroke=\"#5F09D2\" stroke-width=\"1.66667\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path>\n</svg>",
           "a-text": "Your happiness, our priority!",
-          "svg-b": "<svg xmlns=\"http://www.w3.org/2000/svg\" aria-hidden=\"true\" focusable=\"false\" role=\"presentation\" class=\"icon icon-globe\" viewbox=\"0 0 64 64\"><circle cx=\"32\" cy=\"32\" r=\"22\"></circle><path d=\"M13 21h38M10 32h44M13 43h38M32 10c-12 8-12 37 0 44m0-44c12 8 12 37 0 44\"></path></svg>",
+          "svg-b": "<svg width=\"20\" height=\"20\" viewbox=\"0 0 20 20\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\">\n<path d=\"M9.16667 18.1084C9.42003 18.2547 9.70744 18.3317 10 18.3317C10.2926 18.3317 10.58 18.2547 10.8333 18.1084L16.6667 14.7751C16.9198 14.6289 17.13 14.4188 17.2763 14.1658C17.4225 13.9127 17.4997 13.6257 17.5 13.3334V6.66675C17.4997 6.37448 17.4225 6.08742 17.2763 5.83438C17.13 5.58134 16.9198 5.37122 16.6667 5.22508L10.8333 1.89175C10.58 1.74547 10.2926 1.66846 10 1.66846C9.70744 1.66846 9.42003 1.74547 9.16667 1.89175L3.33333 5.22508C3.08022 5.37122 2.86998 5.58134 2.72372 5.83438C2.57745 6.08742 2.5003 6.37448 2.5 6.66675V13.3334C2.5003 13.6257 2.57745 13.9127 2.72372 14.1658C2.86998 14.4188 3.08022 14.6289 3.33333 14.7751L9.16667 18.1084Z\" stroke=\"#5F09D2\" stroke-width=\"1.66667\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path>\n<path d=\"M10 18.3333V10\" stroke=\"#5F09D2\" stroke-width=\"1.66667\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path>\n<path d=\"M2.75 5.83325L9.16917 9.77825C9.42194 9.92361 9.70842 10.0001 10 10.0001C10.2916 10.0001 10.5781 9.92361 10.8308 9.77825L17.25 5.83325\" stroke=\"#5F09D2\" stroke-width=\"1.66667\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path>\n<path d=\"M6.25 3.55835L13.75 7.85002\" stroke=\"#5F09D2\" stroke-width=\"1.66667\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path>\n</svg>",
           "b-text": "Shipping to your door, anywhere in the world",
-          "svg-c": "<svg xmlns=\"http://www.w3.org/2000/svg\" aria-hidden=\"true\" focusable=\"false\" role=\"presentation\" class=\"icon icon-lock\" viewbox=\"0 0 64 64\"><path d=\"M19.45 23.6v-3.2c0-7 5.89-11.75 12.55-11.75 7.21 0 12.55 5.49 12.55 11.75v3.2M10 23.6h44v31.75H10zm22 13.87v7.47\"></path><circle cx=\"32\" cy=\"35.87\" r=\"1.6\"></circle></svg>",
+          "svg-c": "<svg width=\"20\" height=\"20\" viewbox=\"0 0 20 20\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\">\n<path d=\"M6.66683 18.3334C7.12707 18.3334 7.50016 17.9603 7.50016 17.5001C7.50016 17.0398 7.12707 16.6667 6.66683 16.6667C6.20659 16.6667 5.8335 17.0398 5.8335 17.5001C5.8335 17.9603 6.20659 18.3334 6.66683 18.3334Z\" stroke=\"#5F09D2\" stroke-width=\"1.66667\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path>\n<path d=\"M15.8333 18.3334C16.2936 18.3334 16.6667 17.9603 16.6667 17.5001C16.6667 17.0398 16.2936 16.6667 15.8333 16.6667C15.3731 16.6667 15 17.0398 15 17.5001C15 17.9603 15.3731 18.3334 15.8333 18.3334Z\" stroke=\"#5F09D2\" stroke-width=\"1.66667\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path>\n<path d=\"M1.7085 1.70825H3.37516L5.59183 12.0583C5.67314 12.4373 5.88405 12.7761 6.18826 13.0165C6.49246 13.2568 6.87092 13.3835 7.2585 13.3749H15.4085C15.7878 13.3743 16.1556 13.2443 16.451 13.0064C16.7465 12.7686 16.9519 12.437 17.0335 12.0666L18.4085 5.87492H4.26683\" stroke=\"#5F09D2\" stroke-width=\"1.66667\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path>\n</svg>",
           "c-text": "Shop with confidence—100% secure payments"
         }
       },
@@ -596,8 +596,8 @@
           "main_text": "Last hours before price adjustment!",
           "units_text": "Only 162 units left",
           "progress_value": 82,
-          "bg_start": "#ecc4b6",
-          "bg_end": "#f9f8f8",
+          "bg_start": "#fae5dd",
+          "bg_end": "#ffffff",
           "color_text": "#25211d",
           "color_meta": "#7a6f66",
           "color_accent": "#5f09d2",
