--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -25,10 +25,10 @@
     "color_secondary_background": "#efe8e1",
     "color_secondary_accent": "#3f2923",
     "color_secondary_meta": "#3f2923",
-    "color_tertiary_text": "#3f2a23",
-    "color_tertiary_background": "#efe8e1",
-    "color_tertiary_accent": "#e99b81",
-    "color_tertiary_meta": "#d2a58c",
+    "color_tertiary_text": "#25211d",
+    "color_tertiary_background": "#f6eeeb",
+    "color_tertiary_accent": "#ff6900",
+    "color_tertiary_meta": "#5f09d2",
     "color_borders": "#efe8e1",
     "active_header_color_scheme": "secondary",
     "fade_in_items": true,
@@ -91,8 +91,13 @@
       "header": {
         "type": "header",
         "settings": {
-          "logo_text": "✧ Shiny<br>Storm",
-          "main_linklist": "main-menu"
+          "main_linklist": "main-menu",
+          "icon_svg": "<svg width=\"11\" height=\"14\" viewbox=\"0 0 11 14\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\"><path d=\"M2.99984 8.33329C3.44186 8.33329 3.86579 8.1577 4.17835 7.84514C4.49091 7.53258 4.6665 7.10865 4.6665 6.66663C4.6665 5.74663 4.33317 5.33329 3.99984 4.66663C3.28517 3.23796 3.8505 1.96396 5.33317 0.666626C5.6665 2.33329 6.6665 3.93329 7.99984 4.99996C9.33317 6.06663 9.99984 7.33329 9.99984 8.66663C9.99984 9.27946 9.87913 9.8863 9.64461 10.4525C9.41009 11.0187 9.06634 11.5331 8.633 11.9665C8.19966 12.3998 7.68521 12.7435 7.11903 12.9781C6.55284 13.2126 5.94601 13.3333 5.33317 13.3333C4.72034 13.3333 4.1135 13.2126 3.54731 12.9781C2.98113 12.7435 2.46668 12.3998 2.03334 11.9665C1.6 11.5331 1.25625 11.0187 1.02173 10.4525C0.787211 9.8863 0.666504 9.27946 0.666504 8.66663C0.666504 7.89796 0.955171 7.13729 1.33317 6.66663C1.33317 7.10865 1.50877 7.53258 1.82133 7.84514C2.13389 8.1577 2.55781 8.33329 2.99984 8.33329Z\" stroke=\"#FF6900\" stroke-width=\"1.33333\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path></svg>",
+          "main_text": "Last hours before price adjustment!",
+          "units_text": "Only 162 units left",
+          "show_banner": false,
+          "start_date_text": "2026-01-01 00:00:00",
+          "end_date_text": "2026-01-30 00:00:00"
         }
       },
       "footer": {
@@ -129,25 +134,106 @@
           "menus_HGYfyQ"
         ],
         "settings": {
-          "logo": "shopify://shop_images/shiny-store.png",
-          "text": "<p><strong>Email:</strong>hello@shinystorm.com.au</p><p><strong>Noosa Junction Store</strong><br/>Store 9 A/81-87 Noosa Dr.<br/><em>Sun, Mon & Wed from 8:30am to 3pm<br/>Thu-Sat from 8:30am to 4pm</em></p><p><strong>Eumundi Square<br/></strong><em>Wednesdays from 7am to 2pm<br/>Fridays from 8.30am to 1pm<br/>Saturdays from 7am to 2pm</em></p><p><strong>Sunshine Plaza</strong><br/>Mon-Wed from 9am to 5.00pm<br/>Thursday from 9am to 8pm<br/>Friday from 9am to 5.00pm<br/>Saturday from 9am to 5.00pm<br/>Sundays from 10pm to 4m<strong><br/></strong></p>",
-          "show_payment_icons": false,
           "show_locale_selector": false,
-          "show_currency_selector": false,
-          "color_combination": "tertiary"
+          "show_currency_selector": false
         }
       },
       "product": {
         "type": "product",
+        "blocks": {
+          "review_eYkXqc": {
+            "type": "review",
+            "settings": {
+              "rating": "★★★★⯪",
+              "text": "dasdasdasdasdasdasd",
+              "author": "Sarah Hfsdfsdfsdfsdfsd.",
+              "image": "shopify://shop_images/shop-local.jpg"
+            }
+          },
+          "review_BmWkkt": {
+            "type": "review",
+            "settings": {
+              "rating": "★★★★⯪",
+              "text": "The Solace Choker has become my daily companion.",
+              "author": "Sarah H.",
+              "image": "shopify://shop_images/welcome-to-my-business.jpg"
+            }
+          },
+          "bundle_item_mW4rpF": {
+            "type": "bundle_item",
+            "settings": {
+              "product": "8-rules-of-love",
+              "custom_desc": ""
+            }
+          },
+          "bundle_item_Fnzncn": {
+            "type": "bundle_item",
+            "settings": {
+              "product": "1001-spells-the-complete-book-of-spells-for-every-purpose",
+              "custom_desc": "3mm Faceted Gemstone • Waterproof"
+            }
+          },
+          "why_item_FjEfbw": {
+            "type": "why_item",
+            "settings": {
+              "block_color": "#5f09d2",
+              "icon_svg": "<svg width=\"32\" height=\"32\" viewbox=\"0 0 32 32\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\">\n<path d=\"M2.74936 16.464C2.63824 16.1646 2.63824 15.8353 2.74936 15.536C3.83162 12.9118 5.66871 10.668 8.02772 9.08919C10.3867 7.51034 13.1614 6.66748 16 6.66748C18.8386 6.66748 21.6133 7.51034 23.9723 9.08919C26.3313 10.668 28.1684 12.9118 29.2507 15.536C29.3618 15.8353 29.3618 16.1646 29.2507 16.464C28.1684 19.0882 26.3313 21.3319 23.9723 22.9108C21.6133 24.4897 18.8386 25.3325 16 25.3325C13.1614 25.3325 10.3867 24.4897 8.02772 22.9108C5.66871 21.3319 3.83162 19.0882 2.74936 16.464Z\" stroke=\"#5F09D2\" stroke-width=\"2.66667\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path>\n<path d=\"M16 20C18.2091 20 20 18.2091 20 16C20 13.7909 18.2091 12 16 12C13.7909 12 12 13.7909 12 16C12 18.2091 13.7909 20 16 20Z\" stroke=\"#5F09D2\" stroke-width=\"2.66667\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path>\n</svg>",
+              "title": "120",
+              "text": "Viewing Now"
+            }
+          },
+          "why_item_7EFArV": {
+            "type": "why_item",
+            "settings": {
+              "block_color": "#5f09d2",
+              "icon_svg": "<svg width=\"32\" height=\"32\" viewbox=\"0 0 32 32\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\">\n<path d=\"M14.6667 28.9734C15.0721 29.2074 15.5319 29.3306 16 29.3306C16.4681 29.3306 16.9279 29.2074 17.3333 28.9734L26.6667 23.64C27.0717 23.4062 27.408 23.07 27.6421 22.6651C27.8761 22.2603 27.9995 21.801 28 21.3334V10.6667C27.9995 10.1991 27.8761 9.73978 27.6421 9.33492C27.408 8.93005 27.0717 8.59385 26.6667 8.36003L17.3333 3.0267C16.9279 2.79265 16.4681 2.66943 16 2.66943C15.5319 2.66943 15.0721 2.79265 14.6667 3.0267L5.33333 8.36003C4.92835 8.59385 4.59197 8.93005 4.35795 9.33492C4.12392 9.73978 4.00048 10.1991 4 10.6667V21.3334C4.00048 21.801 4.12392 22.2603 4.35795 22.6651C4.59197 23.07 4.92835 23.4062 5.33333 23.64L14.6667 28.9734Z\" stroke=\"#5F09D2\" stroke-width=\"2.66667\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path>\n<path d=\"M16 29.3333V16\" stroke=\"#5F09D2\" stroke-width=\"2.66667\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path>\n<path d=\"M4.3999 9.33325L14.6706 15.6453C15.075 15.8778 15.5334 16.0002 15.9999 16.0002C16.4664 16.0002 16.9248 15.8778 17.3292 15.6453L27.5999 9.33325\" stroke=\"#5F09D2\" stroke-width=\"2.66667\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path>\n<path d=\"M10 5.69336L22 12.56\" stroke=\"#5F09D2\" stroke-width=\"2.66667\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path>\n</svg>",
+              "title": "162",
+              "text": "In Stock"
+            }
+          },
+          "why_item_Mb8hNM": {
+            "type": "why_item",
+            "settings": {
+              "block_color": "#5f09d2",
+              "icon_svg": "<svg width=\"32\" height=\"32\" viewbox=\"0 0 32 32\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\">\n<path d=\"M29.3332 9.33325L17.9998 20.6666L11.3332 13.9999L2.6665 22.6666\" stroke=\"#5F09D2\" stroke-width=\"2.66667\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path>\n<path d=\"M21.3335 9.33325H29.3335V17.3333\" stroke=\"#5F09D2\" stroke-width=\"2.66667\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path>\n</svg>",
+              "title": "190",
+              "text": "Sold Today"
+            }
+          },
+          "why_item_jWbq6K": {
+            "type": "why_item",
+            "settings": {
+              "block_color": "#ff6900",
+              "icon_svg": "<svg width=\"32\" height=\"32\" viewbox=\"0 0 32 32\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\">\n<path d=\"M11.3332 19.3333C12.2172 19.3333 13.0651 18.9821 13.6902 18.357C14.3153 17.7319 14.6665 16.8841 14.6665 16C14.6665 14.16 13.9998 13.3333 13.3332 12C11.9038 9.14267 13.0345 6.59467 15.9998 4C16.6665 7.33333 18.6665 10.5333 21.3332 12.6667C23.9998 14.8 25.3332 17.3333 25.3332 20C25.3332 21.2257 25.0918 22.4393 24.6227 23.5717C24.1537 24.7041 23.4662 25.733 22.5995 26.5997C21.7328 27.4663 20.7039 28.1538 19.5716 28.6229C18.4392 29.0919 17.2255 29.3333 15.9998 29.3333C14.7742 29.3333 13.5605 29.0919 12.4281 28.6229C11.2958 28.1538 10.2669 27.4663 9.40017 26.5997C8.53349 25.733 7.84601 24.7041 7.37696 23.5717C6.90792 22.4393 6.6665 21.2257 6.6665 20C6.6665 18.4627 7.24384 16.9413 7.99984 16C7.99984 16.8841 8.35103 17.7319 8.97615 18.357C9.60127 18.9821 10.4491 19.3333 11.3332 19.3333Z\" stroke=\"#FF6900\" stroke-width=\"2.66667\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path>\n</svg>",
+              "title": "Last Hours",
+              "text": "Price Increment"
+            }
+          }
+        },
+        "block_order": [
+          "review_eYkXqc",
+          "review_BmWkkt",
+          "bundle_item_mW4rpF",
+          "bundle_item_Fnzncn",
+          "why_item_FjEfbw",
+          "why_item_7EFArV",
+          "why_item_Mb8hNM",
+          "why_item_jWbq6K"
+        ],
         "settings": {
-          "enable_payment_button": false,
+          "enable_payment_button": true,
           "show_quantity": true,
+          "enable_description_button": true,
+          "description_title": "Aesthetic & How to Wear",
           "svg-a": "<svg width=\"20\" height=\"20\" viewbox=\"0 0 20 20\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\">\n<path d=\"M15.8332 11.6667C17.0748 10.45 18.3332 8.99167 18.3332 7.08333C18.3332 5.86776 17.8503 4.70197 16.9907 3.84243C16.1312 2.98289 14.9654 2.5 13.7498 2.5C12.2832 2.5 11.2498 2.91667 9.99984 4.16667C8.74984 2.91667 7.7165 2.5 6.24984 2.5C5.03426 2.5 3.86847 2.98289 3.00893 3.84243C2.14939 4.70197 1.6665 5.86776 1.6665 7.08333C1.6665 9 2.9165 10.4583 4.1665 11.6667L9.99984 17.5L15.8332 11.6667Z\" stroke=\"#5F09D2\" stroke-width=\"1.66667\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path>\n</svg>",
           "a-text": "Your happiness, our priority!",
           "svg-b": "<svg width=\"20\" height=\"20\" viewbox=\"0 0 20 20\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\">\n<path d=\"M9.16667 18.1084C9.42003 18.2547 9.70744 18.3317 10 18.3317C10.2926 18.3317 10.58 18.2547 10.8333 18.1084L16.6667 14.7751C16.9198 14.6289 17.13 14.4188 17.2763 14.1658C17.4225 13.9127 17.4997 13.6257 17.5 13.3334V6.66675C17.4997 6.37448 17.4225 6.08742 17.2763 5.83438C17.13 5.58134 16.9198 5.37122 16.6667 5.22508L10.8333 1.89175C10.58 1.74547 10.2926 1.66846 10 1.66846C9.70744 1.66846 9.42003 1.74547 9.16667 1.89175L3.33333 5.22508C3.08022 5.37122 2.86998 5.58134 2.72372 5.83438C2.57745 6.08742 2.5003 6.37448 2.5 6.66675V13.3334C2.5003 13.6257 2.57745 13.9127 2.72372 14.1658C2.86998 14.4188 3.08022 14.6289 3.33333 14.7751L9.16667 18.1084Z\" stroke=\"#5F09D2\" stroke-width=\"1.66667\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path>\n<path d=\"M10 18.3333V10\" stroke=\"#5F09D2\" stroke-width=\"1.66667\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path>\n<path d=\"M2.75 5.83325L9.16917 9.77825C9.42194 9.92361 9.70842 10.0001 10 10.0001C10.2916 10.0001 10.5781 9.92361 10.8308 9.77825L17.25 5.83325\" stroke=\"#5F09D2\" stroke-width=\"1.66667\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path>\n<path d=\"M6.25 3.55835L13.75 7.85002\" stroke=\"#5F09D2\" stroke-width=\"1.66667\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path>\n</svg>",
           "b-text": "Shipping to your door, anywhere in the world",
           "svg-c": "<svg width=\"20\" height=\"20\" viewbox=\"0 0 20 20\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\">\n<path d=\"M6.66683 18.3334C7.12707 18.3334 7.50016 17.9603 7.50016 17.5001C7.50016 17.0398 7.12707 16.6667 6.66683 16.6667C6.20659 16.6667 5.8335 17.0398 5.8335 17.5001C5.8335 17.9603 6.20659 18.3334 6.66683 18.3334Z\" stroke=\"#5F09D2\" stroke-width=\"1.66667\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path>\n<path d=\"M15.8333 18.3334C16.2936 18.3334 16.6667 17.9603 16.6667 17.5001C16.6667 17.0398 16.2936 16.6667 15.8333 16.6667C15.3731 16.6667 15 17.0398 15 17.5001C15 17.9603 15.3731 18.3334 15.8333 18.3334Z\" stroke=\"#5F09D2\" stroke-width=\"1.66667\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path>\n<path d=\"M1.7085 1.70825H3.37516L5.59183 12.0583C5.67314 12.4373 5.88405 12.7761 6.18826 13.0165C6.49246 13.2568 6.87092 13.3835 7.2585 13.3749H15.4085C15.7878 13.3743 16.1556 13.2443 16.451 13.0064C16.7465 12.7686 16.9519 12.437 17.0335 12.0666L18.4085 5.87492H4.26683\" stroke=\"#5F09D2\" stroke-width=\"1.66667\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path>\n</svg>",
-          "c-text": "Shop with confidence—100% secure payments"
+          "c-text": "Shop with confidence—100% secure payments",
+          "why_heading": "Why choose now?",
+          "why_subtitle": "",
+          "loved_title": "Loved by Our Customers"
         }
       },
       "collection-template": {
@@ -587,21 +673,6 @@
           "enable_tag_filter": false,
           "capitalize_tags": false,
           "enable_sort_filter": true
-        }
-      },
-      "sold-out-banner": {
-        "type": "sold-out-banner",
-        "settings": {
-          "icon_text": "🔥",
-          "main_text": "Last hours before price adjustment!",
-          "units_text": "Only 162 units left",
-          "progress_value": 82,
-          "bg_start": "#fae5dd",
-          "bg_end": "#ffffff",
-          "color_text": "#25211d",
-          "color_meta": "#7a6f66",
-          "color_accent": "#5f09d2",
-          "color_border": "#ebe2e0"
         }
       }
     },
